--- a/app/src/main/res/drawable/progress_thumb.xml
+++ b/app/src/main/res/drawable/progress_thumb.xml
@@ -2,8 +2,8 @@
     android:shape="oval">
 
     <size android:height="30dp" android:width="30dp"/>
-    <stroke android:width="18dp" android:color="#AABFA600"/>
-    <solid android:color="#BFA600" />
+    <stroke android:width="18dp" android:color="#AA0089BF"/>
+    <solid android:color="#004CBF" />
     <corners android:radius="1dp" />
 
 </shape>
